--- a/src/scss/pages.scss/_index1.scss
+++ b/src/scss/pages.scss/_index1.scss
@@ -1,5 +1,5 @@
 .test {
-    width: 100vw;
-    height: 100vh;
-    background-color: aqua;
+    width: 100px;
+    height: 100px;
+    background-color: #111;
 }
