--- a/src/scss/pages.scss/_index1.scss
+++ b/src/scss/pages.scss/_index1.scss
@@ -637,6 +637,84 @@ select {
   }
 
 
+//   modal
+.popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 99999;
+    background-color: rgba($color: #000000, $alpha: .3);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.popup__box {
+    position: relative;
+    max-width: 500px;
+    padding: 45px;
+    margin: 35px 15px;
+    box-shadow: -3px 4px 5px -1px rgba(34, 60, 80, 0.15);
+    z-index:1 ;
+    background-color: #f4f3ef;
+}
+
+.open_popup {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup-close-btn {
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    top: 8px;
+    right: 8px;
+    width: 50px;
+    height: 50px;
+    transition: .5s;
+
+}
+
+.popup-close-btn:hover {
+    transform: scale(1.2);
+    transition: .5s;
+    cursor: pointer;
+}
+
+.popup-close-btn:active {
+    color: #5D6A83;
+}
+
+.animate__animated.animate__fadeInDown {
+    --animate-duration: 1s;
+}
+
+.add-address {
+    display: flex;
+    border: none;
+    background-color: #000;
+    color: #fff;
+    width: 100% ;
+    height: 45px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4vh;
+    transition: .5s;
+
+}
+
+.add-address:hover {
+    transform: scale(1.04);
+    transition: .5s;
+}
+
 
 
 
