--- a/src/css/style.css
+++ b/src/css/style.css
@@ -216,10 +216,18 @@ li:hover {
   color: #122947;
 }
 
-.carousel {
+.carousel-1 {
   display: flex;
   flex-direction: row;
   gap: 2.2vw;
+}
+
+.carousel-2 {
+  display: flex;
+  flex-direction: row;
+  gap: 2.2vw;
+  width: 70vw;
+  overflow: scroll;
 }
 
 .bestsellers__description {
@@ -227,6 +235,7 @@ li:hover {
   flex-direction: column;
   color: #122947;
   width: 15.67vw;
+  min-width: 230px;
   margin-right: 3.6vw;
   padding-top: 6vh;
 }
@@ -243,6 +252,7 @@ li:hover {
 }
 
 .bestsellers__card {
+  min-width: 230px;
   width: 230px;
   height: 312px;
   display: flex;
