--- a/src/scss/pages.scss/_index1.scss
+++ b/src/scss/pages.scss/_index1.scss
@@ -235,10 +235,18 @@ margin: 0 3.51vw 0 3.51vw;
     color: #122947;
 }
 
-.carousel {
+.carousel-1 {
     display: flex;
     flex-direction: row;
     gap: 2.20vw;
+}
+
+.carousel-2 {
+    display: flex;
+    flex-direction: row;
+    gap: 2.20vw;
+    width: 70vw;
+    overflow: scroll;
 }
 
 .bestsellers__description {
@@ -246,6 +254,8 @@ margin: 0 3.51vw 0 3.51vw;
     flex-direction: column;
     color: #122947;
     width: 15.67vw;
+    min-width: 230px;
+
     margin-right: 3.6vw;
     padding-top: 6vh;
 }
@@ -262,6 +272,7 @@ margin: 0 3.51vw 0 3.51vw;
 }
 
 .bestsellers__card {
+    min-width: 230px;
     width: 230px;
     height: 312px;
     display: flex;
@@ -272,6 +283,7 @@ margin: 0 3.51vw 0 3.51vw;
 
 .bestsellers__card_1 {
     background-image: url('/public/images/crem_1.png');
+    
 }
 
 .bestsellers__card_2 {
