--- a/src/scss/pages.scss/_catalog.scss
+++ b/src/scss/pages.scss/_catalog.scss
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'mplus1-medium';
+    src: url('/public/fonts/MPLUS1p-Medium.ttf')
+}
+
+@font-face {
+    font-family: 'mplus1-regular';
+    src: url('/public/fonts/MPLUS1p-Regular.ttf')
+}
+
+@font-face {
+    font-family: 'raleway-medium';
+    src: url('/public/fonts/Raleway-Medium.ttf')
+}
+
+
+
 .nav_border-bottom {
     padding-top: 12vh;
     border-bottom: 1px solid rgba(219, 220, 224, 1);
@@ -103,6 +120,7 @@
 
     img:hover {
         transform: scale(1.1);
+        transition: .3s;
     }
 }
 
