--- a/src/scss/pages.scss/_basket.scss
+++ b/src/scss/pages.scss/_basket.scss
@@ -1,17 +1,17 @@
-@font-face {
-    font-family: 'mplus1-medium';
-    src: url('/public/fonts/MPLUS1p-Medium.ttf')
-}
+// @font-face {
+//     font-family: 'mplus1-medium';
+//     src: url('/public/fonts/MPLUS1p-Medium.ttf')
+// }
 
-@font-face {
-    font-family: 'mplus1-regular';
-    src: url('/public/fonts/MPLUS1p-Regular.ttf')
-}
+// @font-face {
+//     font-family: 'mplus1-regular';
+//     src: url('/public/fonts/MPLUS1p-Regular.ttf')
+// }
 
-@font-face {
-    font-family: 'raleway-medium';
-    src: url('/public/fonts/Raleway-Medium.ttf')
-}
+// @font-face {
+//     font-family: 'raleway-medium';
+//     src: url('/public/fonts/Raleway-Medium.ttf')
+// }
 
 
 .basket__container {
