--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,4 +14,5 @@ html {
 
 @import './pages.scss/index1';
 @import './pages.scss/catalog';
+@import './pages.scss/card';
 @import './pages.scss/basket';
