--- a/src/scss/pages.scss/_index1.scss
+++ b/src/scss/pages.scss/_index1.scss
@@ -19,7 +19,11 @@ html{
     font-size: 18px;
 }
 
-header {
+body {
+    background-color: #F7F7F7;;
+}
+
+.index-header {
     background-image: url('/public/images/header_bg.jpg');
     height: 650px;
     width: 100%;
@@ -79,7 +83,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.5); 
+    background-color: rgba(250, 250, 250, 0.6); 
     z-index: 1000; 
     // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.001); /* Добавляем тень для отделения от содержимого страницы */
 }
